--- a/document/book.bib
+++ b/document/book.bib
@@ -942,28 +942,6 @@ Basically article on IDyOM 101
   file = {/Users/davidjohnbaker/Zotero/storage/GAQXAP9C/Arthur - 2018 - A Perceptual Study of Scale-degree Qualia in Conte.pdf}
 }
 
-@misc{Karpinkski1990Pdf,
-  title = {Karpinkski1990.Pdf},
-  file = {/Users/davidjohnbaker/Zotero/storage/NLMLSK6A/karpinkski1990.pdf},
-  annote = {Karpinski 1990 Notes
-
-says melodic dictation is important and we should teach it
-
-He says reasons that we do aural skills is really based on "vague aphorisms about relationships..."
-
-Not tons of experimental evidence, but case studies!
-
-Dictation stages!!
-
-~~~ Michael Rogers two stages
-
-~~~ Ronald Thomas 15!!
-
-Talks about problems with memory, Chunks
-
-~}
-}
-
 @book{ritchieIntelligenceAllThat2015,
   series = {All that matters},
   title = {Intelligence: {{All}} That Matters},
@@ -1264,6 +1242,182 @@ Talks about problems with memory, Chunks
   publisher = {{University of Chicago Press}},
   author = {Narmour, Eugene},
   year = {1990}
+}
+
+@article{dowlingTonalStrengthMelody1991,
+  title = {Tonal Strength and Melody Recognition after Long and Short Delays},
+  volume = {50},
+  issn = {0031-5117, 1532-5962},
+  doi = {10.3758/BF03212222},
+  language = {en},
+  number = {4},
+  journal = {Perception \& Psychophysics},
+  author = {Dowling, W. Jay},
+  month = jul,
+  year = {1991},
+  pages = {305-313},
+  file = {/Users/davidjohnbaker/Zotero/storage/XZWMPFTW/Dowling - 1991 - Tonal strength and melody recognition after long a.pdf}
+}
+
+@article{dewittRecognitionNovelMelodies1986,
+  title = {Recognition of {{Novel Melodies}} after {{Brief Delays}}},
+  volume = {3},
+  issn = {07307829, 15338312},
+  doi = {10.2307/40285336},
+  language = {en},
+  number = {3},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Dewitt, Lucinda A. and Crowder, Robert G.},
+  month = apr,
+  year = {1986},
+  pages = {259-274},
+  file = {/Users/davidjohnbaker/Zotero/storage/X7YGEGNP/Dewitt and Crowder - 1986 - Recognition of Novel Melodies after Brief Delays.pdf}
+}
+
+@article{dowlingExpectancyAttentionMelody1990,
+  title = {Expectancy and Attention in Melody Perception.},
+  volume = {9},
+  issn = {2162-1535, 0275-3987},
+  doi = {10.1037/h0094150},
+  language = {en},
+  number = {2},
+  journal = {Psychomusicology: A Journal of Research in Music Cognition},
+  author = {Dowling, W. Jay},
+  year = {1990},
+  pages = {148-160},
+  file = {/Users/davidjohnbaker/Zotero/storage/EJEW5WIR/Dowling - 1990 - Expectancy and attention in melody perception..pdf}
+}
+
+@article{saffranStatisticalLearningTone1999,
+  title = {Statistical Learning of Tone Sequences by Human Infants and Adults},
+  volume = {70},
+  issn = {00100277},
+  doi = {10.1016/S0010-0277(98)00075-4},
+  abstract = {Previous research suggests that language learners can detect and use the statistical properties of syllable sequences to discover words in continuous speech (e.g. Aslin, R.N., Saffran, J.R., Newport, E.L., 1998. Computation of conditional probability statistics by 8-month-old infants. Psychological Science 9, 321\textendash{}324; Saffran, J.R., Aslin, R.N., Newport, E.L., 1996. Statistical learning by 8-month-old infants. Science 274, 1926\textendash{}1928; Saffran, J., R., Newport, E.L., Aslin, R.N., (1996). Word segmentation: the role of distributional cues. Journal of Memory and Language 35, 606\textendash{}621; Saffran, J.R., Newport, E.L., Aslin, R.N., Tunick, R.A., Barrueco, S., 1997. Incidental language learning: Listening (and learning) out of the corner of your ear. Psychological Science 8, 101\textendash{}195). In the present research, we asked whether this statistical learning ability is uniquely tied to linguistic materials. Subjects were exposed to continuous non-linguistic auditory sequences whose elements were organized into `tone words'. As in our previous studies, statistical information was the only word boundary cue available to learners. Both adults and 8-month-old infants succeeded at segmenting the tone stream, with performance indistinguishable from that obtained with syllable streams. These results suggest that a learning mechanism previously shown to be involved in word segmentation can also be used to segment sequences of non-linguistic stimuli. \textcopyright{} 1999 Elsevier Science B.V. All rights reserved.},
+  language = {en},
+  number = {1},
+  journal = {Cognition},
+  author = {Saffran, Jenny R and Johnson, Elizabeth K and Aslin, Richard N and Newport, Elissa L},
+  month = feb,
+  year = {1999},
+  pages = {27-52},
+  file = {/Users/davidjohnbaker/Zotero/storage/Y3YHBZ3S/Saffran et al. - 1999 - Statistical learning of tone sequences by human in.pdf}
+}
+
+@book{blandSightSingingMelodic1984,
+  title = {Sight {{Singing Through Melodic Analysis}}: {{A Guide}} to the {{Study}} of {{Sight Singing}} and an {{Aid}} to {{Ear Training Instruction}}},
+  publisher = {{Scarecrow Press}},
+  author = {Bland, Leland},
+  year = {1984}
+}
+
+@book{rootMethodicalSightSingingLessons1931,
+  title = {Methodical {{Sight}}-{{Singing}}: {{Lessons}} in {{Vocal Culture}}},
+  publisher = {{Bryn Mawr, Pennsylvania: Theodore Presser Co.}},
+  author = {Root, Frederick},
+  year = {1931}
+}
+
+@article{bantonRoleVisualAuditory1995,
+  title = {The {{Role}} of {{Visual}} and {{Auditory Feedback}} during {{Sight}}-{{Reading}} of {{Music}}},
+  volume = {23},
+  number = {1},
+  journal = {Psychology of Music},
+  author = {Banton, Louise},
+  year = {1995},
+  pages = {3--16},
+  file = {/Users/davidjohnbaker/Zotero/storage/KBX9INXC/banton1995.pdf}
+}
+
+@article{harrisonEffectsMusicalAptitude1994,
+  title = {Effects of {{Musical Aptitude}}, {{Academic Ability}}, {{Music Experience}}, and {{Motivation}} on {{Aural Skills}}},
+  volume = {42},
+  issn = {00224294},
+  doi = {10.2307/3345497},
+  language = {en},
+  number = {2},
+  journal = {Journal of Research in Music Education},
+  author = {Harrison, Carole S. and Asmus, Edward P. and Serpe, Richard T.},
+  year = {1994},
+  pages = {131},
+  file = {/Users/davidjohnbaker/Zotero/storage/JMXSXINM/Harrison et al. - 1994 - Effects of Musical Aptitude, Academic Ability, Mus.pdf}
+}
+
+@article{mullensiefenInvestigatingImportanceSelftheories2015,
+  title = {Investigating the Importance of Self-Theories of Intelligence and Musicality for Students' Academic and Musical Achievement},
+  volume = {6},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2015.01702},
+  abstract = {Musical abilities and active engagement with music have been shown to be positively associated with many cognitive abilities as well as social skills and academic performance in secondary school students. While there is evidence from intervention studies that musical training can be a cause of these positive relationships, recent findings in the literature have suggested that other factors, such as genetics, family background or personality traits, might also be contributing factors. In addition, there is mounting evidence that self-concepts and beliefs can affect academic performance independently of intellectual ability. Students who believe that intelligence is malleable are more likely to attribute poor academic performances to effort rather than ability, and are more likely to take remedial action to improve their performance. However, it is currently not known whether student's beliefs about the nature of musical talent also influence the development of musical abilities in a similar fashion. Therefore, this study introduces a short self-report measure termed ``Musical Self-Theories and Goals,'' closely modeled on validated measures for self-theories in academic scenarios. Using this measure the study investigates whether musical self-theories are related to students' musical development as indexed by their concurrent musical activities and their performance on a battery of listening tests. We use data from a cross-sectional sample of 313 secondary school students to construct a network model describing the relationships between self-theories and academic as well as musical outcome measures, while also assessing potential effects of intelligence and the Big Five personality dimensions. Results from the network model indicate that self-theories of intelligence and musicality are closely related. In addition, both kinds of self-theories are connected to the students' academic achievement through the personality dimension conscientiousness and academic effort. Finally, applying the do-calculus method to the network model we estimate that the size of the assumed causal effects between musical self-theories and academic achievement lie between 0.07 and 0.15 standard deviations.},
+  language = {en},
+  journal = {Frontiers in Psychology},
+  author = {M\"ullensiefen, Daniel and Harrison, Peter and Caprini, Francesco and Fancourt, Amy},
+  month = nov,
+  year = {2015},
+  file = {/Users/davidjohnbaker/Zotero/storage/TJBQ59NW/Müllensiefen et al. - 2015 - Investigating the importance of self-theories of i.pdf}
+}
+
+@article{kovacsProcessOverlapTheory2016,
+  title = {Process {{Overlap Theory}}: {{A Unified Account}} of the {{General Factor}} of {{Intelligence}}},
+  volume = {27},
+  issn = {1047-840X, 1532-7965},
+  shorttitle = {Process {{Overlap Theory}}},
+  doi = {10.1080/1047840X.2016.1153946},
+  abstract = {The most replicated result in the field of intelligence is the positive manifold, which refers to an all-positive pattern of correlations among diverse cognitive tests. The positive manifold is typically described by a general factor, or g. In turn, g is often identified as general intelligence, yet this explanation is contradicted by a number of results. Here we offer a new account of g: process overlap theory. According to the theory, cognitive tests tap domain-general executive processes, identified primarily in research on working memory, as well as more domain-specific processes. Executive processes are tapped in an overlapping manner across cognitive tests such that they are required more often than domain-specific ones. The theory provides an account of a number of findings on human intelligence. As well, it is formalized as a multidimensional item response model and as a structural model, and the neural mechanisms underlying the proposed overlapping processes are discussed.},
+  language = {en},
+  number = {3},
+  journal = {Psychological Inquiry},
+  author = {Kovacs, Kristof and Conway, Andrew R. A.},
+  month = jul,
+  year = {2016},
+  pages = {151-177},
+  file = {/Users/davidjohnbaker/Zotero/storage/QMB2TSNR/Kovacs and Conway - 2016 - Process Overlap Theory A Unified Account of the G.pdf}
+}
+
+@article{levitinWhatDoesIt2012,
+  title = {What {{Does It Mean}} to {{Be Musical}}?},
+  volume = {73},
+  issn = {08966273},
+  doi = {10.1016/j.neuron.2012.01.017},
+  language = {en},
+  number = {4},
+  journal = {Neuron},
+  author = {Levitin, Daniel J.},
+  month = feb,
+  year = {2012},
+  pages = {633-637},
+  file = {/Users/davidjohnbaker/Zotero/storage/5QELLHA8/Levitin - 2012 - What Does It Mean to Be Musical.pdf}
+}
+
+@article{peretzNatureMusicBiological2006,
+  title = {The Nature of Music from a Biological Perspective},
+  volume = {100},
+  issn = {00100277},
+  doi = {10.1016/j.cognition.2005.11.004},
+  abstract = {Music, as language, is a universal human trait. Throughout human history and across all cultures, people have produced and enjoyed music. Despite its ubiquity, the musical capacity is rarely studied as a biological function. Music is typically viewed as a cultural invention. In this paper, the evidence bearing on the biological perspective of the musical capacity is reviewed. Related issues, such as domain-specificity, innateness, and brain localization, are addressed in an attempt to offer a unified conceptual basis for the study of music processing. This scheme should facilitate the study of the biological foundations of music by bringing together the fields of genetics, developmental and comparative research, neurosciences, and musicology.},
+  language = {en},
+  number = {1},
+  journal = {Cognition},
+  author = {Peretz, Isabelle},
+  month = may,
+  year = {2006},
+  pages = {1-32},
+  file = {/Users/davidjohnbaker/Zotero/storage/NGY883X6/Peretz - 2006 - The nature of music from a biological perspective.pdf}
+}
+
+@article{peretzModularityMusicProcessing2003,
+  title = {Modularity of Music Processing},
+  volume = {6},
+  issn = {1097-6256, 1546-1726},
+  doi = {10.1038/nn1083},
+  language = {en},
+  number = {7},
+  journal = {Nature Neuroscience},
+  author = {Peretz, Isabelle and Coltheart, Max},
+  month = jul,
+  year = {2003},
+  pages = {688-691},
+  file = {/Users/davidjohnbaker/Zotero/storage/8WANJVGK/Peretz and Coltheart - 2003 - Modularity of music processing.pdf}
 }
 
 
